--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,6 @@
 Session.vim
 .netrwhist
 *~
+__pycache__
 
-# ---> Linux
-*~
-
-# KDE directory preferences
-.directory
-
-# Linux trash folder which might appear on any partition or disk
-.Trash-*
 
